* Fix z-index of PopupMenu

--- a/src/view/Views/CategoryList/style.scss
+++ b/src/view/Views/CategoryList/style.scss
@@ -2,10 +2,6 @@
   max-width: 430px;
 }
 
-.popup-menu-list {
-  --popupmenu-z-index: 2500;
-}
-
 /* Categories list */
 .categories-list {
   display: flex;
