--- a/src/view/Views/PersonList/style.scss
+++ b/src/view/Views/PersonList/style.scss
@@ -1,7 +1,3 @@
 .heading {
   max-width: calc(var(--tile-size) * 4 + var(--tile-gap) * 3);
 }
-
-.popup-menu-list {
-  --popupmenu-z-index: 2500;
-}
