--- a/src/view/css/app.scss
+++ b/src/view/css/app.scss
@@ -12,6 +12,7 @@
 
   /* Popup menu, Chart popup & etc. */
   --popup-menu-backdrop-filter: blur(2px);
+  --popupmenu-z-index: 9999;
 }
 
 html,
